# autoeda

./: .gitignore  .gitkeep  README.md  app.py  pyproject.toml  requirements.txt  tree.py  vercel.ignore  vercel.json
static/: styles.css
templates/: index.html  preview.html  results.html
