[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoeda"
version = "1.0.0"
requires-python = ">=3.8,<3.12"
dependencies = [
    "Flask==2.3.3",
    "pandas==1.5.3",
    "numpy==1.24.3",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "Werkzeug==2.3.7"
]